// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeExpression.boolean 1`] = `
{
  "@": {
    "end": {
      "column": 5,
      "line": 1,
      "offset": 4,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "BooleanLiteral",
  "value": true,
}
`;

exports[`TypeExpression.identifier 1`] = `
{
  "@": {
    "end": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "TypeIdentifier",
  "value": "number",
}
`;

exports[`TypeExpression.identifier2 1`] = `
{
  "@": {
    "end": {
      "column": 4,
      "line": 1,
      "offset": 3,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "TypeIdentifier",
  "value": "Foo",
}
`;

exports[`TypeExpression.intersection 1`] = `
{
  "@": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "BinaryTypeOperation",
  "left": {
    "@": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "TypeIdentifier",
    "value": "Foo",
  },
  "operator": "&",
  "right": {
    "@": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "kind": "TypeIdentifier",
    "value": "boolean",
  },
}
`;

exports[`TypeExpression.number 1`] = `
{
  "@": {
    "end": {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NumberLiteral",
  "value": 3,
}
`;

exports[`TypeExpression.string 1`] = `
{
  "@": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "StringLiteral",
  "value": "foo",
}
`;

exports[`TypeExpression.union 1`] = `
{
  "@": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "BinaryTypeOperation",
  "left": {
    "@": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "StringLiteral",
    "value": "foo",
  },
  "operator": "|",
  "right": {
    "@": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "kind": "NumberLiteral",
    "value": 3,
  },
}
`;

exports[`TypeIdentifier 1`] = `
{
  "@": {
    "end": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "TypeIdentifier",
  "value": "string",
}
`;

exports[`TypeTag.1 1`] = `
{
  "@": {
    "end": {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "TypeTag",
  "optional": false,
  "typeExpression": {
    "@": {
      "end": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "kind": "TypeIdentifier",
    "value": "number",
  },
}
`;

exports[`TypeTag.2 1`] = `
{
  "@": {
    "end": {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "TypeTag",
  "optional": false,
  "typeExpression": {
    "@": {
      "end": {
        "column": 25,
        "line": 1,
        "offset": 24,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "@": {
            "end": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "kind": "TypeTag",
          "optional": false,
          "typeExpression": {
            "@": {
              "end": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
              "start": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
            },
            "kind": "TypeIdentifier",
            "value": "number",
          },
        },
      },
      {
        "@": {
          "end": {
            "column": 24,
            "line": 1,
            "offset": 23,
          },
          "start": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "@": {
            "end": {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "start": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "kind": "TypeTag",
          "optional": false,
          "typeExpression": {
            "@": {
              "end": {
                "column": 24,
                "line": 1,
                "offset": 23,
              },
              "start": {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
            },
            "kind": "TypeIdentifier",
            "value": "number",
          },
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`TypeTag.optional 1`] = `
{
  "@": {
    "end": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "TypeTag",
  "optional": true,
  "typeExpression": {
    "@": {
      "end": {
        "column": 27,
        "line": 1,
        "offset": 26,
      },
      "start": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "@": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "kind": "TypeTag",
          "optional": false,
          "typeExpression": {
            "@": {
              "end": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "start": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
            },
            "kind": "TypeIdentifier",
            "value": "number",
          },
        },
      },
      {
        "@": {
          "end": {
            "column": 26,
            "line": 1,
            "offset": 25,
          },
          "start": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "@": {
            "end": {
              "column": 26,
              "line": 1,
              "offset": 25,
            },
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "kind": "TypeTag",
          "optional": true,
          "typeExpression": {
            "@": {
              "end": {
                "column": 26,
                "line": 1,
                "offset": 25,
              },
              "start": {
                "column": 20,
                "line": 1,
                "offset": 19,
              },
            },
            "kind": "TypeIdentifier",
            "value": "number",
          },
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;
